# heat-spectral

./: AGENT.md  Cargo.toml  README.md
examples/: advanced.rs  tutorial.rs
src/: diffusion.rs  error.rs  fiedler.rs  filter.rs  graph.rs  kernel.rs  laplacian.rs  lib.rs  main.rs
tests/: integration.rs
